Edits have been made